--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ cffi==1.11.3
 chardet==3.0.4
 dj-database-url==0.4.2
 Django==2.0.1
+django-mysql==2.2.0
 Faker==0.8.9
 flake8==3.5.0
 gunicorn==19.7.1
 idna==2.6
+jsonfield==2.0.2
 mccabe==0.6.1
 pew==1.1.2
 Pillow==5.0.0
