--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ cffi==1.11.3
 chardet==3.0.4
 dj-database-url==0.4.2
 Django==2.0.1
+django-easy-select2==1.3.4
+django-grappelli==2.11.1
+django-multiselectfield==0.1.8
 django-mysql==2.2.0
 Faker==0.8.9
 flake8==3.5.0
