--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,21 @@
-asn1crypto==0.24.0
-attrs==17.4.0
-aws-encryption-sdk==1.3.3
 beautifulsoup4==4.6.0
-boto3==1.6.21
-botocore==1.9.21
+boto3==1.7.11
+botocore==1.10.11
 bs4==0.0.1
-cffi==1.11.5
-cryptography==2.2.2
+certifi==2018.4.16
+chardet==3.0.4
 docutils==0.14
-enum34==1.1.6
 futures==3.2.0
-google-api-python-client==1.6.5
-httplib2==0.11.1
+gspread==3.0.0
+httplib2==0.11.3
 idna==2.6
-ipaddress==1.0.19
 jmespath==0.9.3
 oauth2client==4.1.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-pycparser==2.18
-python-dateutil==2.6.1
+python-dateutil==2.7.2
+requests==2.18.4
 rsa==3.4.2
 s3transfer==0.1.13
 six==1.11.0
-uritemplate==3.0.0
-wrapt==1.10.11
-argon2-cffi==18.1.0
-bcrypt==3.1.4
-certifi==2018.1.18
-cffi==1.11.3
-chardet==3.0.4
-dj-database-url==0.4.2
-Django==2.0.1
-django-easy-select2==1.3.4
-django-grappelli==2.11.1
-django-multiselectfield==0.1.8
-django-mysql==2.2.0
-Faker==0.8.9
-flake8==3.5.0
-gunicorn==19.7.1
-idna==2.6
-jsonfield==2.0.2
-mccabe==0.6.1
-pew==1.1.2
-Pillow==5.0.0
-pipenv==9.0.3
-psycopg2==2.7.3.2
-pycodestyle==2.3.1
-pycparser==2.18
-pyflakes==1.6.0
-python-dateutil==2.6.1
-pytz==2017.3
-requests==2.18.4
-six==1.11.0
-text-unidecode==1.1
 urllib3==1.22
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-whitenoise==3.3.1
